--- a/BlazorServer.UI/Components/App.razor
+++ b/BlazorServer.UI/Components/App.razor
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />    
     <link id="themeId" rel="stylesheet" href="_content/Radzen.Blazor/css/dark.css">
+    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/blazor-error.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
