--- a/BlazorServer.UI/Components/Pages/Home.razor
+++ b/BlazorServer.UI/Components/Pages/Home.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>@localizer["home"]</PageTitle>
 
-<h1>@localizer["helloWorld"]</h1>
+<h1>@localizer["hello_world"]</h1>
 
 Welcome to your new app.
 
@@ -28,44 +28,55 @@ Welcome to your new app.
         <br />
         @contentStringData
         <hr />
-        <div >
-            <div >
-                <div >
-                    <RadzenCard class="w-100 mb-4" Style="display: flex; align-items: center; gap: 0.5rem">
-                        <RadzenCheckBox @bind-Value="@smooth" Name="smooth"></RadzenCheckBox>
-                        <RadzenLabel Text="@localizer["smooth"]" Component="smooth" Style="margin-right: 1rem;" />
-                        <RadzenCheckBox @bind-Value="@showDataLabels" Name="dataLabels"></RadzenCheckBox>
-                        <RadzenLabel Text="@localizer["dataLabels"]" Component="dataLabels" Style="margin-right: 1rem;" />
-                        <RadzenCheckBox @bind-Value="@showMarkers" Name="markers"></RadzenCheckBox>
-                        <RadzenLabel Text="@localizer["showMarkers"]" Component="markers" />
-                    </RadzenCard>
-                    <RadzenChart>
-                        <RadzenLineSeries Smooth="@smooth" Data="@revenue2023" CategoryProperty="Date" Title="2023" LineType="LineType.Dashed" ValueProperty="Revenue">
-                            <RadzenMarkers Visible="@showMarkers" MarkerType="MarkerType.Square" />
-                            <RadzenSeriesDataLabels Visible="@showDataLabels" />
-                        </RadzenLineSeries>
-                        <RadzenLineSeries Smooth="@smooth" Data="@revenue2024" CategoryProperty="Date" Title="2024" ValueProperty="Revenue">
-                            <RadzenMarkers Visible="@showMarkers" MarkerType="MarkerType.Circle" />
-                            <RadzenSeriesDataLabels Visible="@showDataLabels" />
-                        </RadzenLineSeries>
-                        <RadzenCategoryAxis Padding="20" />
-                        <RadzenValueAxis Formatter="@FormatAsUSD">
-                            <RadzenGridLines Visible="true" />
-                            <RadzenAxisTitle Text="@localizer["revenueInEuro"]" />
-                        </RadzenValueAxis>
-                    </RadzenChart>
-                </div>
-            </div>
-        </div>
+        
+        <RadzenCard class="w-100 mb-4" Style="display: flex; align-items: center; gap: 0.5rem">
+            <RadzenCheckBox @bind-Value="@smooth" Name="smooth"></RadzenCheckBox>
+            <RadzenLabel Text="@localizer["smooth"]" Component="smooth" Style="margin-right: 1rem;" />
+            <RadzenCheckBox @bind-Value="@showDataLabels" Name="dataLabels"></RadzenCheckBox>
+            <RadzenLabel Text="@localizer["data_labels"]" Component="dataLabels" Style="margin-right: 1rem;" />
+            <RadzenCheckBox @bind-Value="@showMarkers" Name="markers"></RadzenCheckBox>
+            <RadzenLabel Text="@localizer["show_markers"]" Component="markers" />
+        </RadzenCard>
+        <RadzenChart>
+            <RadzenLineSeries Smooth="@smooth" Data="@revenue2023" CategoryProperty="Date" Title="2023" LineType="LineType.Dashed" ValueProperty="Revenue">
+                <RadzenMarkers Visible="@showMarkers" MarkerType="MarkerType.Square" />
+                <RadzenSeriesDataLabels Visible="@showDataLabels" />
+            </RadzenLineSeries>
+            <RadzenLineSeries Smooth="@smooth" Data="@revenue2024" CategoryProperty="Date" Title="2024" ValueProperty="Revenue">
+                <RadzenMarkers Visible="@showMarkers" MarkerType="MarkerType.Circle" />
+                <RadzenSeriesDataLabels Visible="@showDataLabels" />
+            </RadzenLineSeries>
+            <RadzenCategoryAxis Padding="20" />
+            <RadzenValueAxis Formatter="@FormatAsCurrency">
+                <RadzenGridLines Visible="true" />
+                <RadzenAxisTitle Text="@localizer["revenue_in_euro"]" />
+            </RadzenValueAxis>
+        </RadzenChart>
+          
     </Authorized>
 </AuthorizeView>
 
-<p>UserAgent = @UserAgent</p>
-<p>IPAddress = @IPAddress</p>
+<RadzenRow Gap="1rem">
+    <RadzenColumn Size="12" class="rz-background-color-info-lighter rz-color-on-info-lighter rz-p-5">     
+        Column 1 of 4; word-break: break-all;
+        <RadzenText TextStyle="TextStyle.Subtitle2">
+            <div style="word-break: break-all;">UserAgent = @UserAgent</div>
+        </RadzenText>
+    </RadzenColumn>
+    <RadzenColumn Size="4" class="rz-background-color-info-lighter rz-color-on-info-lighter rz-p-5">
+        Column 2 of 4        
+    </RadzenColumn>
+    <RadzenColumn class="rz-background-color-info-lighter rz-color-on-info-lighter rz-p-5">
+        Column 3 of 4
+    </RadzenColumn>
+    <RadzenColumn class="rz-background-color-info-lighter rz-color-on-info-lighter rz-p-5">
+        Column 4 of 4
+    </RadzenColumn>
+</RadzenRow>
 
+<p>IPAddress = @IPAddress</p>
 <p>LocalTimeZone = @LocalTimeZone</p>
 <p>DateTimeNow = @DateTimeNow</p>
-
 
 <hr />
 
@@ -78,6 +89,8 @@ Welcome to your new app.
     public string? LocalTimeZone;
     public string? DateTimeNow;
 
+    DataItem[] revenue2023, revenue2024;
+
     protected override async Task OnInitializedAsync()
     {
         LocalTimeZone = TimeZoneInfo.Local.ToString();
@@ -89,6 +102,8 @@ Welcome to your new app.
                 UserAgent = httpContextAccessor.HttpContext.User.Claims.First(c => c.Type == "jwtToken").ToString();          
 
             IPAddress = httpContextAccessor.HttpContext.Connection.RemoteIpAddress.ToString();
+
+            InitGraphData();
 
             await base.OnInitializedAsync();
         }        
@@ -111,134 +126,137 @@ Welcome to your new app.
         public double Revenue { get; set; }
     }
 
-    string FormatAsUSD(object value)
+    string FormatAsCurrency(object value)
     {
         return ((double)value).ToString();
     }
 
-    DataItem[] revenue2023 = new DataItem[] {
-        new DataItem
-        {
-            Date = "Jan",
-            Revenue = 234000
-        },
-        new DataItem
-        {
-            Date = "Feb",
-            Revenue = 269000
-        },
-        new DataItem
-        {
-            Date = "Mar",
-            Revenue = 233000
-        },
-        new DataItem
-        {
-            Date = "Apr",
-            Revenue = 244000
-        },
-        new DataItem
-        {
-            Date = "May",
-            Revenue = 214000
-        },
-        new DataItem
-        {
-            Date = "Jun",
-            Revenue = 253000
-        },
-        new DataItem
-        {
-            Date = "Jul",
-            Revenue = 274000
-        },
-        new DataItem
-        {
-            Date = "Aug",
-            Revenue = 284000
-        },
-        new DataItem
-        {
-            Date = "Sept",
-            Revenue = 273000
-        },
-        new DataItem
-        {
-            Date = "Oct",
-            Revenue = 282000
-        },
-        new DataItem
-        {
-            Date = "Nov",
-            Revenue = 289000
-        },
-        new DataItem
-        {
-            Date = "Dec",
-            Revenue = 294000
-        }
-    };
+    public void InitGraphData()
+    {
+        revenue2023 = new DataItem[] {
+            new DataItem
+            {
+                Date = localizer["jan"],
+                Revenue = 234000
+            },
+            new DataItem
+            {
+                Date = localizer["feb"],
+                Revenue = 269000
+            },
+            new DataItem
+            {
+                Date = localizer["mar"],
+                Revenue = 233000
+            },
+            new DataItem
+            {
+                Date = localizer["apr"],
+                Revenue = 244000
+            },
+            new DataItem
+            {
+                Date = localizer["may"],
+                Revenue = 214000
+            },
+            new DataItem
+            {
+                Date = localizer["jun"],
+                Revenue = 253000
+            },
+            new DataItem
+            {
+                Date = localizer["jul"],
+                Revenue = 274000
+            },
+            new DataItem
+            {
+                Date = localizer["aug"],
+                Revenue = 284000
+            },
+            new DataItem
+            {
+                Date = localizer["sept"],
+                Revenue = 273000
+            },
+            new DataItem
+            {
+                Date = localizer["oct"],
+                Revenue = 282000
+            },
+            new DataItem
+            {
+                Date = localizer["nov"],
+                Revenue = 289000
+            },
+            new DataItem
+            {
+                Date = localizer["dec"],
+                Revenue = 294000
+            }
+        };
 
-    DataItem[] revenue2024 = new DataItem[] {
-        new DataItem
-        {
-            Date = "Jan",
-            Revenue = 334000
-        },
-        new DataItem
-        {
-            Date = "Feb",
-            Revenue = 369000
-        },
-        new DataItem
-        {
-            Date = "Mar",
-            Revenue = 333000
-        },
-        new DataItem
-        {
-            Date = "Apr",
-            Revenue = 344000
-        },
-        new DataItem
-        {
-            Date = "May",
-            Revenue = 314000
-        },
-        new DataItem
-        {
-            Date = "Jun",
-            Revenue = 353000
-        },
-        new DataItem
-        {
-            Date = "Jul",
-            Revenue = 374000
-        },
-        new DataItem
-        {
-            Date = "Aug",
-            Revenue = 384000
-        },
-        new DataItem
-        {
-            Date = "Sept",
-            Revenue = 373000
-        },
-        new DataItem
-        {
-            Date = "Oct",
-            Revenue = 382000
-        },
-        new DataItem
-        {
-            Date = "Nov",
-            Revenue = 389000
-        },
-        new DataItem
-        {
-            Date = "Dec",
-            Revenue = 394000
-        }
-    };
+        revenue2024 = new DataItem[] {
+            new DataItem
+            {
+                Date = localizer["jan"],
+                Revenue = 334000
+            },
+            new DataItem
+            {
+                Date = localizer["feb"],
+                Revenue = 369000
+            },
+            new DataItem
+            {
+                Date = localizer["mar"],
+                Revenue = 333000
+            },
+            new DataItem
+            {
+                Date = localizer["apr"],
+                Revenue = 344000
+            },
+            new DataItem
+            {
+                Date = localizer["may"],
+                Revenue = 314000
+            },
+            new DataItem
+            {
+                Date = localizer["jun"],
+                Revenue = 353000
+            },
+            new DataItem
+            {
+                Date = localizer["jul"],
+                Revenue = 374000
+            },
+            new DataItem
+            {
+                Date = localizer["aug"],
+                Revenue = 384000
+            },
+            new DataItem
+            {
+                Date = localizer["sept"],
+                Revenue = 373000
+            },
+            new DataItem
+            {
+                Date = localizer["oct"],
+                Revenue = 382000
+            },
+            new DataItem
+            {
+                Date = localizer["nov"],
+                Revenue = 389000
+            },
+            new DataItem
+            {
+                Date = localizer["dec"],
+                Revenue = 394000
+            }
+        };
+    }
 }
