--- a/BlazorServer.UI/Components/Pages/Users/UsersList/UsersList.razor
+++ b/BlazorServer.UI/Components/Pages/Users/UsersList/UsersList.razor
@@ -8,14 +8,14 @@
 <RadzenLink Path="users/add" Text="@localizer["add_user"]" Icon="person_add" class="rz-button rz-button-md rz-primary rz-shade-default rz-mb-2" />
 
 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced" AllowSorting="true" PageSize="5" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true"
-                Data="@loginList" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single">
+                Data="@loginList" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single" EmptyText="@localizer["no_records"]">
     <Columns>
         <RadzenDataGridColumn Property="EmployeeID" Filterable="false" Title="ID" Frozen="true" Width="80px" TextAlign="TextAlign.Center" />
-        <RadzenDataGridColumn Title="Photo" Frozen="true" Sortable="false" Filterable="false" Width="80px" TextAlign="TextAlign.Center" />
-        <RadzenDataGridColumn Property="FirstName" Title="First Name" Frozen="true" Width="160px" />
-        <RadzenDataGridColumn Property="LastName" Title="Last Name" Width="160px" />
-        <RadzenDataGridColumn Property="Address" Title="Address" Width="200px" />
-        <RadzenDataGridColumn Property="City" Title="City" Width="160px" />        
+        <RadzenDataGridColumn Title="@localizer["photo"]" Frozen="true" Sortable="false" Filterable="false" Width="80px" TextAlign="TextAlign.Center" />
+        <RadzenDataGridColumn Property="FirstName" Title="@localizer["first_name"]" Frozen="true" Width="160px" />
+        <RadzenDataGridColumn Property="LastName" Title="@localizer["last_name"]" Width="160px" />
+        <RadzenDataGridColumn Property="Address" Title="@localizer["address"]" Width="200px" />
+        <RadzenDataGridColumn Property="City" Title="@localizer["city"]" Width="160px" />
         <RadzenDataGridColumn Property="Notes" Title="Notes" Width="300px" />
     </Columns>
 </RadzenDataGrid>
