--- a/BlazorServer.UI/Components/Layout/MainLayout.razor
+++ b/BlazorServer.UI/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
 
         <RadzenFooter style="width: 100vw">
             <RadzenIcon Icon="water_drop" />
-            <RadzenLabel Text="MK Vodovod" />
+            <RadzenLabel Text="Footer" />
         </RadzenFooter>
     </RadzenLayout>
 </div>
