--- a/BlazorServer.UI/Components/Layout/NavMenu.razor
+++ b/BlazorServer.UI/Components/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
             <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
             <RadzenIcon Icon="water_drop" />
-            <RadzenLabel Text="MK Vodovod" />
+            <RadzenLabel Text="Nav bar" />
         </RadzenStack>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Center">
             <CultureSelector />
