--- a/BlazorServer.UI/Components/Layout/NavMenu.razor
+++ b/BlazorServer.UI/Components/Layout/NavMenu.razor
@@ -26,7 +26,7 @@
                             <RadzenProfileMenuItem Path="profile" Icon="settings" Text="Profile"></RadzenProfileMenuItem>
                             <RadzenProfileMenuItem Path="application-users" Icon="person" Text="Users"></RadzenProfileMenuItem>
                             <RadzenProfileMenuItem Path="application-roles" Icon="security" Text="Roles"></RadzenProfileMenuItem>
-                            <RadzenButton ButtonStyle="ButtonStyle.Primary" Size="ButtonSize.Medium" Icon="logout" Text="Odjava" Click="Logout" Style="width: 100%;"></RadzenButton>
+                            <RadzenButton ButtonStyle="ButtonStyle.Primary" Size="ButtonSize.Medium" Icon="logout" Text="@localizer["logout"]" Click="Logout" Style="width: 100%;"></RadzenButton>
                         </Authorized>
                     </AuthorizeView>
                 </ChildContent>                
