Setted card width to 25%

--- a/BlazorServer.UI/Components/Pages/Home.razor
+++ b/BlazorServer.UI/Components/Pages/Home.razor
@@ -30,13 +30,13 @@ Welcome to your new app.
         <hr />
 
         <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.SpaceAround" AlignItems="AlignItems.Stretch" Gap="1rem">
-            <RadzenCard>
+            <RadzenCard class="rz-w-25">
                 <RadzenText TextStyle="TextStyle.H6">Radzen H6</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">
                     Lorem ipsum text.
                 </RadzenText>
             </RadzenCard>
-            <RadzenCard>
+            <RadzenCard class="rz-w-25">
                 <RadzenText TextStyle="TextStyle.H6">Radzen H6</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">
                     Lorem ipsum text.
@@ -45,13 +45,13 @@ Welcome to your new app.
                     Lorem ipsum text.
                 </RadzenText>
             </RadzenCard>
-            <RadzenCard>
+            <RadzenCard class="rz-w-25">
                 <RadzenText TextStyle="TextStyle.H6">Radzen H6</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">
                     Lorem ipsum text.
                 </RadzenText>
             </RadzenCard>
-            <RadzenCard>
+            <RadzenCard class="rz-w-25">
                 <RadzenText TextStyle="TextStyle.H6">Radzen H6</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">
                     Lorem ipsum text.
