Fixed 404 redirect. Updated translations.

--- a/BlazorServer.UI/Components/Layout/NavMenu.razor
+++ b/BlazorServer.UI/Components/Layout/NavMenu.razor
@@ -23,9 +23,9 @@
                 <ChildContent>
                     <AuthorizeView>
                         <Authorized>
-                            <RadzenProfileMenuItem Path="profile" Icon="settings" Text="Profile"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Path="application-users" Icon="person" Text="Users"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Path="application-roles" Icon="security" Text="Roles"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Path="profile" Icon="settings" Text="@localizer["profile"]"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Path="application-users" Icon="person" Text="@localizer["users"]"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Path="application-roles" Icon="security" Text="@localizer["roles"]"></RadzenProfileMenuItem>
                             <RadzenButton ButtonStyle="ButtonStyle.Primary" Size="ButtonSize.Medium" Icon="logout" Text="@localizer["logout"]" Click="Logout" Style="width: 100%;"></RadzenButton>
                         </Authorized>
                     </AuthorizeView>
