--- a/BlazorServer.UI/Components/Routes.razor
+++ b/BlazorServer.UI/Components/Routes.razor
@@ -3,4 +3,7 @@
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+         Error 404 - Page is not found
+    </NotFound>
 </Router>
