Updated Radzen.Blazor nuget package to 5.5.5. Added null checking in code and default values in program.cs

--- a/BlazorServer.UI/Components/Helpers/CultureSelector.razor
+++ b/BlazorServer.UI/Components/Helpers/CultureSelector.razor
@@ -27,7 +27,7 @@
         try
         {
             var supportedCulturesList = _configuration.GetSection("SupportedCultures").Get<string[]>();
-            supportedCultures = new CultureInfo[(int)supportedCulturesList?.Length];
+            supportedCultures = new CultureInfo[supportedCulturesList?.Length ?? 0];
 
             for (int i = 0; i < supportedCulturesList?.Length; i++)
                 supportedCultures[i] = new CultureInfo(supportedCulturesList[i]);
