--- a/BlazorServer.UI/Components/Pages/Users/UserDetails/UserDetails.razor
+++ b/BlazorServer.UI/Components/Pages/Users/UserDetails/UserDetails.razor
@@ -234,23 +234,23 @@ else
    public class Order
    {
        public int CardId { get; set; }
-       public string CardNr { get; set; }
+       public string? CardNr { get; set; }
        public DateTime ExpiryDate { get; set; }
-       public string CardHolder { get; set; }
-       public string Name { get; set; }
-       public string Address1 { get; set; }
-       public string Address2 { get; set; }
-       public string City { get; set; }
-       public string State { get; set; }
-       public string Zip { get; set; }
+       public string? CardHolder { get; set; }
+       public string? Name { get; set; }
+       public string? Address1 { get; set; }
+       public string? Address2 { get; set; }
+       public string? City { get; set; }
+       public string? State { get; set; }
+       public string? Zip { get; set; }
        public int Country { get; set; }
        public int StoreId { get; set; }
-       public string Warehouse { get; set; }
-       public string Region { get; set; }
-       public string System { get; set; }
+       public string? Warehouse { get; set; }
+       public string? Region { get; set; }
+       public string? System { get; set; }
        public int TransId { get; set; }
-       public string Register { get; set; }
-       public string Clerk { get; set; }
+       public string? Register { get; set; }
+       public string? Clerk { get; set; }
        public decimal Amount { get; set; }
        public decimal Tax { get; set; }
        public DateTime OrderDate { get; set; }
@@ -260,13 +260,13 @@ else
    public class CreditCard
    {
        public int CardId { get; set; }
-       public string CardNr { get; set; }
+       public string? CardNr { get; set; }
    }
 
    public class Country
    {
        public int Id { get; set; }
-       public string Name { get; set; }
+       public string? Name { get; set; }
    }
 
    Order order = new Order()
