--- a/BlazorServer.UI/Components/Layout/MainLayout.razor
+++ b/BlazorServer.UI/Components/Layout/MainLayout.razor
@@ -1,8 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <RadzenNotification/>
-    <RadzenTooltip />
+    <RadzenComponents />
 
     <RadzenLayout>
         <NavMenu />
