Updated error checking in BaseHttpClient. Added default username ad password on login page. Updated nuget packages.

--- a/BlazorServer.UI/Components/Pages/Identity/Login.razor
+++ b/BlazorServer.UI/Components/Pages/Identity/Login.razor
@@ -14,7 +14,7 @@
             <RadzenText TextStyle="TextStyle.H4">@localizer["login"]</RadzenText>
         </RadzenStack>
         <RadzenTemplateForm Data=@("LoginWithDefaultValues")>
-            <RadzenLogin AllowRegister="false" AllowResetPassword="false"
+            <RadzenLogin AllowRegister="false" AllowResetPassword="false" Password="1234" Username="user"
                          AllowRememberMe="true"
                          UserText="@localizer["username"]" PasswordText="@localizer["password"]" RememberMeText="@localizer["remember_me"]" LoginText="@localizer["login"]"
                          UserRequired="@localizer["username_required"]" PasswordRequired="@localizer["password_required"]"
